# mlcourse.ai

./: .bashrc  .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  .profile  .yaspellerrc.json  CNAME  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE.md  Makefile  README.md  Thyroid.ipynb  Yandex_click-Copy1.ipynb  _config.yml  _toc.yml  docker-compose.yml  genindex.html  hw2_session2_visual_analysis_basics.ipynb  new txt file.txt  objects.inv  output.json  output.txt  project_women_clothing_review.ipynb  pyproject.toml  reqirements.txt  run.sh  run_docker_jupyter.py  run_docker_jupyter.sh  run_docker_jupyter_windows.cmd  run_jupyter.cmd  run_jupyter.sh  run_virtualenv_jupyter.sh  search.html  searchindex.js  songs.py  Псевдоним project_alice
mlcourse_ai_bonus_jupyter_book/: README.md  _config.yml  _toc.yml  _toc.yml.bkp  pyproject.toml  requirements.txt
mlcourse_ai_bonus_jupyter_book/_build/.doctrees/: README.doctree  environment.pickle
mlcourse_ai_bonus_jupyter_book/_build/.doctrees/book/: index.doctree
mlcourse_ai_bonus_jupyter_book/_build/.doctrees/book/assignment01/: assignment01_intro.doctree  assignment01_pandas_olympic.doctree  assignment01_pandas_olympic_solution.doctree
mlcourse_ai_bonus_jupyter_book/_build/.doctrees/book/assignment02/: assignment02_USA_flights_EDA.doctree  assignment02_USA_flights_EDA_solution.doctree  assignment02_intro.doctree
mlcourse_ai_bonus_jupyter_book/_build/.doctrees/book/assignment03/: assignment03_decision_trees.doctree  assignment03_decision_trees_solution.doctree  assignment03_intro.doctree  assignment03_optional_implement_decision_tree.doctree  assignment03_optional_implement_decision_tree_solution.doctree
mlcourse_ai_bonus_jupyter_book/_build/.doctrees/book/assignment04/: assignment04_intro.doctree  assignment04_kaggle_alice_logistic_regression_sparse_data_feature_engineering.doctree  assignment04_kaggle_alice_logistic_regression_sparse_data_feature_engineering_solution.doctree
mlcourse_ai_bonus_jupyter_book/_build/.doctrees/book/assignment05/: assignment05_intro.doctree  assignment05_rf_logit_scoring_texts.doctree  assignment05_rf_logit_scoring_texts_solution.doctree
mlcourse_ai_bonus_jupyter_book/_build/.doctrees/book/assignment06/: assignment06_intro.doctree  assignment06_medium_popularity_beat_baseline.doctree  assignment06_medium_popularity_beat_baseline_solution.doctree
mlcourse_ai_bonus_jupyter_book/_build/.doctrees/book/assignment07/: assignment07_intro.doctree  assignment07_pca_clustering.doctree  assignment07_pca_clustering_solution.doctree
mlcourse_ai_bonus_jupyter_book/_build/.doctrees/book/assignment08/: assignment08_implement_sgd_regr_and_clf.doctree  assignment08_implement_sgd_regr_and_clf_solution.doctree  assignment08_intro.doctree
mlcourse_ai_bonus_jupyter_book/_build/.jupyter_cache/: global.db
mlcourse_ai_bonus_jupyter_book/_build/html/: .buildinfo  README.html  genindex.html  objects.inv  search.html  searchindex.js
mlcourse_ai_bonus_jupyter_book/_build/html/book/: index.html
mlcourse_ai_bonus_jupyter_book/_static/data/assignment3/: mlbootcamp5_train.csv
mlcourse_ai_bonus_jupyter_book/book/: index.md
mlcourse_ai_bonus_jupyter_book/book/assignment01/: assignment01_intro.md  assignment01_pandas_olympic.ipynb  assignment01_pandas_olympic_solution.ipynb
mlcourse_ai_bonus_jupyter_book/book/assignment02/: assignment02_intro.md
mlcourse_ai_bonus_jupyter_book/book/assignment03/: assignment03_intro.md  assignment03_optional_implement_decision_tree_solution.ipynb
mlcourse_ai_bonus_jupyter_book/book/assignment04/: assignment04_intro.md  baseline_1.csv  baseline_2.csv
mlcourse_ai_bonus_jupyter_book/book/assignment05/: assignment05_rf_logit_scoring_texts.ipynb
mlcourse_ai_bonus_jupyter_book/book/assignment06/: assignment06_medium_popularity_beat_baseline.ipynb  assignment06_medium_popularity_beat_baseline_solution.ipynb
mlcourse_ai_bonus_jupyter_book/book/assignment07/: assignment07_intro.md  assignment07_pca_clustering.ipynb  assignment07_pca_clustering_solution.ipynb
mlcourse_ai_bonus_jupyter_book/book/assignment08/: assignment08_intro.md
mlcourse_ai_bonus_jupyter_book/book/assignment09/: assignment09_time_series.ipynb
mlcourse_ai_bonus_jupyter_book/book/assignment10/: assignment10_implement_boosting_solution.ipynb
(+101924 files in other folders)
