[tool.poetry]
name = "mlcourse.ai"
version = "1.0.0"
description = "Open Machine Learning course by ods.ai"
authors = ["Yury Kashnitsky <yury.kashnitsky@gmail.com>"]
license = "CC BY-NC-SA 4.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
eli5 = "0.11.0"
holidays = "^0.25"
ipywidgets = "^8.1.3"
jupyter = "^1.0.0"
jupyter-book = "^0.15.1"
matplotlib = "^3.10.0"
numpy = "^2.2.1"
pandas = "^2.2.3"
pillow = "^10.3.0"
plotly = "^5.22.0"
prophet = "^1.1.5"
pydot = "^1.4.2"
pydotplus = "^2.0.2"
pytesseract = "^0.3.10"
reverse-geocoder = "^1.5.1"
seaborn = "^0.13.2"
scikit-learn = "^1.6.0"
scipy = "^1.15.0"
statsmodels = "^0.14.4"
ua-parser = "^0.16.1"
user_agents = "^2.2.0"
wordcloud = "^1.9.1"
xgboost = "^2.1.3"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}
fonttools = "^4.37.1"
gdown = "^4.7.1"
ghp-import = "^2.1.0"
pre-commit = "^2.20.0"
pylatexenc = "^2.10"
pylint = "^2.15.0"
pyyaml = "^6.0.1"
sphinx-jupyterbook-latex = "^0.5.2"
pyzmq = "^26.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
