[project]
name = "mlcourse-ai"
version = "1.0.0"
description = "Open Machine Learning course by ods.ai"
authors = ["Yury Kashnitsky <yury.kashnitsky@gmail.com>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eli5>=0.16.0",
    "holidays>=0.73",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "jupyter-book>=1.0.4.post1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "plotly>=6.1.1",
    "prophet>=1.1.6",
    "pydot>=4.0.0",
    "pydotplus>=2.0.2",
    "pytesseract>=0.3.13",
    "reverse-geocoder>=1.5.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "ua-parser>=1.0.1",
    "user-agents>=2.2.0",
    "wordcloud>=1.9.4",
    "xgboost>=3.0.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "fonttools>=4.58.0",
    "gdown>=5.2.0",
    "ghp-import>=2.1.0",
    "pre-commit>=4.2.0",
    "pylatexenc>=2.10",
    "pylint>=3.3.7",
    "pyyaml>=6.0.2",
    "pyzmq>=26.4.0",
    "sphinx-jupyterbook-latex>=1.0.0",
]
