[project]
name = "mlcourse-ai"
version = "1.0.0"
description = "Open Machine Learning course"
authors = ["Yury Kashnitsky <yury.kashnitsky@gmail.com>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eli5>=0.16.0",
    "holidays>=0.88",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyter-book>=2.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "plotly>=6.5.2",
    "prophet>=1.2.1",
    "pydot>=4.0.1",
    "pydotplus>=2.0.2",
    "pytesseract>=0.3.13",
    "reverse-geocoder>=1.5.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "ua-parser>=1.0.1",
    "user-agents>=2.2.0",
    "wordcloud>=1.9.5",
    "xgboost>=3.1.3",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "fonttools>=4.61.1",
    "gdown>=5.2.1",
    "ghp-import>=2.1.0",
    "pre-commit>=4.5.1",
    "pylatexenc>=2.10",
    "pylint>=4.0.4",
    "pyyaml>=6.0.3",
    "pyzmq>=27.1.0",
    "sphinx-jupyterbook-latex>=1.0.0",
]
