[tool.poetry]
name = "mlcourse.ai bonus assignments"
version = "0.1.0"
description = "Bonus assignments accompanying Open Machine Learning course by ods.ai"
authors = ["Yury Kashnitsky <yury.kashnitsky@gmail.com>"]
license = "CC BY-NC-SA 4.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
fonttools = "^4.28.5"
jupyter-book = "^0.13.1"
matplotlib = "^3.5.3"
numpy = "^1.23.2"
pandas = "^1.4.3"
pillow = "^8.4.0"
pre-commit = "^2.13.0"
pydot = "^1.4.2"
pydotplus = "^2.0.2"
pylatexenc = "^2.10"
pytesseract = "^0.3.8"
pyyaml = "^6.0"
reverse-geocoder = "^1.5.1"
seaborn = "^0.11.2"
scikit-learn = "^1.1.2"
scipy = "^1.9.1"
sphinx-jupyterbook-latex = "^0.4.6"
statsmodels = "^0.13.2"
tqdm = "^4.64.0"
ua-parser = "^0.10.0"
user_agents = "^2.2.0"


[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
black = {version = "^21.12b0", allow-prereleases = true}
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
